--- a/index.html
+++ b/index.html
@@ -111,12 +111,7 @@ main{
 .modal-close{
   position:absolute; right:16px; top:16px; background:none; border:none; color:white; font-size:22px; cursor:pointer;
 }
-.modal h3{ margin:0 0 6px 0; }
 .modal .meta{ font-size:14px; opacity:0.95; margin-bottom:10px; }
-.modal .grid{
-  display:grid; gap:10px; grid-template-columns:1fr 1fr;
-}
-@media (max-width:700px){ .modal .grid{ grid-template-columns:1fr; } }
 .modal img.main{ width:100%; border-radius:8px; object-fit:cover; margin:12px 0; max-height:480px; }
 
 footer{ text-align:center; color:rgba(255,255,255,0.6); padding:30px 0; }
@@ -373,9 +368,27 @@ function openModal(html){modalContent.innerHTML=html;modal.hidden=false;setTimeo
 function closeModal(){const box=modal.querySelector('.modal');box.classList.remove('fullscreen');modal.classList.remove('show');setTimeout(()=>{modal.hidden=true;modalContent.innerHTML='';},150);document.body.style.overflow='';}
 
 /* --- DETAILY --- */
-function showKorunaDetail(it){openModal(`<h3>${it.hora}${it.v?` (${it.v} m)`:''}</h3><div class="meta">${[it.z||'',it.d||''].filter(Boolean).join(' · ')}</div><img class="main" src="${imgKoruna(it.p)}" alt="${it.hora}">`);}
 
-// 🏔 Alpy – přehledný vertikální detail s čárkou a "hod"
+// Koruna Evropy – stejný formát jako Alpy
+function showKorunaDetail(it) {
+  const hora = `${it.p}. ${it.hora || ''}`;
+  const vyska = it.v ? `${it.v} m` : '';
+  const zeme = it.z || '';
+  const datum = it.d || '';
+  const pov = `<p class="meta">Krátké povídání o výstupu bude doplněno.</p>`;
+
+  openModal(`
+    <div>
+      <div class="meta"><strong>${hora}</strong>${vyska ? ', ' + vyska : ''}</div>
+      <div class="meta">${zeme}</div>
+      <div class="meta">${datum}</div>
+      <img class="main" src="${imgKoruna(it.p)}" alt="${it.hora}">
+      ${pov}
+    </div>
+  `);
+}
+
+// Alpy – s čárkou a "hod"
 function showAlpyDetail(it, orderNum) {
   const hora = `${it.p}. ${it.hora || ''}`;
   const vyska = it.v ? `${it.v} m` : '';
